Add visualize PDF and Calculate PDF experiments

--- a/experiment/simulation/continousrv.html
+++ b/experiment/simulation/continousrv.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/virtual-labs/virtual-style@0.0.8-b/css/style.min.css">
     <link rel="stylesheet" href="./css/continousrv.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <!-- <link rel="stylesheet" href="./css/main.css"> -->
     <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <title>Functions of a Continuous Random Variable</title>
@@ -22,6 +22,16 @@
                     <ul>
                         <li class="is-active" id="Task1">
                             <a>Sigma Algebra</a>
+                        </li>
+                        <li id="Task3" onclick="window.location.href = 'visualizePDF.html';">
+                            <a>
+                                Visualize PDF of function of RV
+                            </a>
+                        </li>
+                        <li id="Task2" onclick="window.location.href = 'calculatePDF.html';">
+                            <a>
+                                Calculate PDF of funcion of Multiple RV
+                            </a>
                         </li>
                     </ul>
                 </div>
