--- a/experiment/simulation/calculatePDF.html
+++ b/experiment/simulation/calculatePDF.html
@@ -28,9 +28,9 @@
 				</div>
 				<div class="column">
 					<div class="v-tabs">
-						<ul>							
+						<ul>
 							<li id="Task1" onclick="window.location.href = 'continousrv.html';">
-								<a>Sigma Algebra</a>
+								<a>Calculate the CDF of a CRV</a>
 							</li>
 							<li id="Task3" onclick="window.location.href = 'visualizePDF.html';">
 								<a>
@@ -54,16 +54,59 @@
 				<div class="v-collapsible-instruction-container v-instruction-container">
 					<div class="v-collapsible is-size-5">Instructions</div>
 					<div class="v-content" style="text-align: left; padding-left: 10%; padding-right: 10%;">
-						<ul style="list-style: disc;">
-							<b>Quick theory overview:</b>
-							<ul style="list-style: disc;">
-								<li>
+						<b><u>Quick theory overview:</u></b>
+						<br>
+						<b>Functions of Two Continuous Random Variables</b>
 
-								</li>
-								<b>Procedure:</b>
-								<li>
-								</li>
-							</ul>
+						<p>For two continuous random variables \( g(X, Y) \), the concepts are similar. For \(
+							E[g(X, Y)] \), we use LOTUS:</p>
+
+						<p><b>LOTUS for two continuous random variables</b>:</p>
+
+						<p>
+							\( E[g(X, Y)] = \int_{-\infty}^{\infty} \int_{-\infty}^{\infty} g(x, y) f_{XY}(x, y) \,
+							dx \, dy \)
+						</p>
+
+						<p>If \( Z = g(X, Y) \) and we are interested in its distribution, we can start by writing:
+						</p>
+
+						<p>
+							\( F_Z(z) = P(Z \leq z) = P(g(X, Y) \leq z) = \iint\limits_D f_{XY}(x, y) \, dx \, dy \)
+						</p>
+
+						<p>where \( D = \{(x, y) | g(x, y) \leq z\} \). To find the PDF of \( Z \), we differentiate
+							\( F_Z(z) \).</p>
+
+						<ul style="list-style: disc;">
+							<b><u>Procedure</u></b>
+							<li>
+								You are given two random variables (i.e. X and Y) and their respective PDFs.
+							</li>
+							<li>
+								Then, you are given another random variable Z which is a function of X and Y.
+							</li>
+							<li>
+								Your task is to find the pdf of this function of multiple random variables (i.e. Z).
+							</li>
+							<li>
+								When you click on start, you you will be asked to enter the PDF value at a particular Z
+								value.
+							</li>
+							<li>
+								When you enter the value, that will be plotted in the graph and you will be asked to
+								enter the
+								PDF value at another value of Z. This will be done for 5 different values of Z.
+							</li>
+							<li>
+								After that, the actual PDF will be shown and you will be able to see how the values you
+								entered and the actual PDF are different.
+							</li>
+							<li>
+								Check observations to see the difference between the values you entered and the actual
+								PDF. The precision checked is upto 4 decimal places.
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -77,7 +120,8 @@
 				<div class="v-datalist-container components-list">
 					<br>
 					<p id="question-text">
-						Find the PDF of Z = X+Y where X and Y are independent uniform random variables on the interval [0,1].
+						Find the PDF of Z = X+Y where X and Y are independent uniform random variables on the interval
+						[0,1].
 					</p>
 					<br>
 				</div>
